# sprout_html

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.docs/: design.md  frontend-svelte.md  glm-5.2-showcase.html  update.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: ai.py  assets.py  files.py
backend/app/services/: ai_service.py  file_service.py  frontend_service.py
backend/tests/: test_ai_service_models.py  test_file_service_paths.py  test_frontend_service.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.svelte  app.css
frontend/src/lib/application/usecases/: aiUsecases.ts  fileUsecases.ts
frontend/src/lib/infrastructure/api/: aiApi.ts  client.ts  fileApi.ts
frontend/src/lib/infrastructure/editor/: EditorEngine.ts  htmlPreparer.ts  serializer.ts  treeBuilder.ts
frontend/src/lib/infrastructure/export/: zipExport.ts
frontend/src/lib/presentation/components/: AiAssistant.svelte  AiDesignStylePicker.svelte  AiModelToggle.svelte  AiTabs.svelte  EditorCanvas.svelte  ElementTree.svelte  FileOpener.svelte  PropertiesPanel.svelte  RuntimePreview.svelte  StyleFieldEditor.svelte  Toolbar.svelte  TreeNodeView.svelte
frontend/src/lib/state/: editorController.ts
frontend/tests/: fullscreenLayout.test.ts  htmlAssets.test.ts  responsiveLayout.test.ts  uiLabels.test.ts
samples/: sample.html
(+10 files in other folders)
